--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/jest": "^27.0.1",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-lazyload": "^3.1.1",
     "@types/styled-components": "^5.1.21",
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazyload": "^3.2.0",
     "react-query": "^3.34.12",
     "react-scripts": "^5.0.0",
     "styled-components": "^5.3.3",
