--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lazyload": "^3.2.0",
+    "react-loader-spinner": "^5.1.2",
     "react-query": "^3.34.12",
     "react-scripts": "^5.0.0",
     "styled-components": "^5.3.3",
